
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_zero; struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;


 int AF_INET ;
 int D_M ;
 int IPPROTO_TCP ;
 int P_M ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memset (int *,int ,int) ;
 int socket (int ,int ,int ) ;

int sexsock(char *host)
{
     int sock;
 struct hostent *he;
 struct sockaddr_in x82;

 if((he=gethostbyname(host))==((void*)0))
 {
      return(-P_M);
 }
 if((sock=socket(AF_INET,SOCK_STREAM,IPPROTO_TCP))==-P_M)
 {
      return(-P_M);
 }
 x82.sin_family=AF_INET;
 x82.sin_port=htons(80);
 x82.sin_addr=*((struct in_addr *)he->h_addr);
 memset(&(x82.sin_zero),D_M,8);

 if(connect(sock,(struct sockaddr *)&x82,sizeof(struct sockaddr))==-P_M)
 {
      return(-P_M);
 }
 return(sock);
}
